force-app/main/default/objects/EN_Report__mdt/EN_Report__mdt.object-meta.xml
<CustomObject>
    <label>EN_帳票用</label>
</CustomObject>