force-app/main/default/objects/EN_Report__mdt/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <label>順番</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>