force-app/main/default/objects/EN_Report__mdt/fields/SumDepartment__c.field-meta.xml
<CustomField>
    <fullName>SumDepartment__c</fullName>
    <label>集計部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>